--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,13 @@
   }
 }
 
+/* Breakpoint personalizado para telas muito pequenas */
+@media (min-width: 475px) {
+  .xs\:inline {
+    display: inline;
+  }
+}
+
 /* Cores específicas do Internacional */
 .inter-red {
   color: #E5050F;
